--- a/feature_app/src/main/res/layout/activity_login.xml
+++ b/feature_app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,71 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/images"
+        android:alpha="1"
         tools:context=".LoginActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <android.support.v7.widget.AppCompatTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-        android:text="Testando"/>
+            android:layout_width="287dp"
+            android:layout_height="216dp"
+            android:background="@drawable/logo"
+            tools:ignore="MissingConstraints" android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="49dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" android:id="@+id/linearLayoutCompat2"
+            app:layout_constraintHorizontal_bias="1.0">
 
     </android.support.v7.widget.LinearLayoutCompat>
+
+    <android.support.v7.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints" android:id="@+id/linearLayoutCompat"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
+            app:layout_constraintHorizontal_bias="0.0">
+
+
+        <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <Button
+                    android:text="Button"
+                    android:layout_width="333dp"
+                    android:layout_height="71dp"
+                    android:id="@+id/button2"
+                    android:layout_marginBottom="16dp"
+                    android:background="@color/colorPrimary"
+                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.514"/>
+            <EditText
+                    android:layout_width="280dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:ems="10"
+                    android:background="@color/colorPrimary"
+                    android:theme="@style/Theme.AppCompat"
+                    android:id="@+id/editText5" android:layout_marginBottom="32dp"
+                    app:layout_constraintBottom_toTopOf="@+id/button2" android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintStart_toStartOf="parent"/>
+            <EditText
+                    android:layout_width="325dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:ems="10"
+                    android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" android:layout_marginBottom="28dp"
+                    app:layout_constraintBottom_toTopOf="@+id/editText5" app:layout_constraintHorizontal_bias="0.604"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
 
 </android.support.constraint.ConstraintLayout>
