--- a/feature_app/src/main/res/layout-land/activity_login.xml
+++ b/feature_app/src/main/res/layout-land/activity_login.xml
@@ -9,30 +9,33 @@
         tools:context=".LoginActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="287dp"
-            android:layout_height="216dp"
+            android:layout_width="213dp"
+            android:layout_height="184dp"
             android:background="@drawable/logo"
-            tools:ignore="MissingConstraints" android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="49dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" android:id="@+id/linearLayoutCompat2"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="100dp">
+            tools:ignore="MissingConstraints"
+            android:orientation="horizontal"
+            android:id="@+id/linearLayoutCompat2"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat">
 
     </android.support.v7.widget.LinearLayoutCompat>
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
             tools:ignore="MissingConstraints" android:id="@+id/linearLayoutCompat"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
-            app:layout_constraintHorizontal_bias="0.0">
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="56dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0">
 
 
         <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
             <Button
