--- a/feature_app/src/main/res/layout/activity_login.xml
+++ b/feature_app/src/main/res/layout/activity_login.xml
@@ -9,14 +9,14 @@
         tools:context=".LoginActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="287dp"
-            android:layout_height="216dp"
+            android:layout_width="312dp"
+            android:layout_height="248dp"
             android:background="@drawable/logo"
             tools:ignore="MissingConstraints" android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="49dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" android:id="@+id/linearLayoutCompat2"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="100dp">
+            app:layout_constraintHorizontal_bias="0.52" android:layout_marginTop="90dp">
 
     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -36,12 +36,14 @@
                 android:layout_height="wrap_content">
 
             <Button
-                    android:text="@string/btnLogin"
+                    android:text="@string/btnlogin"
                     android:layout_width="290dp"
                     android:layout_height="47dp"
                     android:id="@+id/btnlogin"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:onClick="goToMainScreenActvity"
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="16dp"
                     app:layout_constraintBottom_toTopOf="@+id/btncadastr"/>
@@ -71,9 +73,13 @@
                     android:text="@string/btncadastr"
                     android:layout_width="179dp"
                     android:layout_height="42dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/btncadastr"
-                    android:textSize="12sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:id="@+id/btncadastr"
+                    android:textSize="12sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
                     android:onClick="goToSignUpActvity"/>
         </android.support.constraint.ConstraintLayout>
 
