--- a/feature_app/src/main/res/layout/activity_main_screen.xml
+++ b/feature_app/src/main/res/layout/activity_main_screen.xml
@@ -9,12 +9,15 @@
 
     <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:layout_height="50dp"
+            android:background="@color/colorPrimary"
             android:minHeight="?attr/actionBarSize"
             app:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:id="@+id/toolbar"/>
+            android:id="@+id/toolbar"
+            tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:ignore="MissingConstraints"/>
 
     <TextView
             android:id="@+id/text_view"
@@ -26,7 +29,10 @@
             android:textStyle="bold"
             android:layout_gravity="center"
             android:text="Tap an item from action bar menu."
-    />
+            tools:layout_editor_absoluteX="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:ignore="MissingConstraints"/>
 
 
 </android.support.constraint.ConstraintLayout>
