--- a/feature_app/src/main/res/menu/main_menu.xml
+++ b/feature_app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,9 @@
     <item
             android:id="@+id/action_settings"
             android:title="@string/menu_action_settings"
-            app:showAsAction="always"/>
+            app:showAsAction="collapseActionView"/>
     <item
             android:id="@+id/action_about_us"
             android:title="@string/menu_action_about_us"
-            app:showAsAction="ifRoom"/>
+            app:showAsAction="collapseActionView"/>
 </menu>
