--- a/feature_app/src/main/res/layout/activity_main_screen.xml
+++ b/feature_app/src/main/res/layout/activity_main_screen.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/tollbarcollor"
             android:minHeight="?attr/actionBarSize"
             app:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
