--- a/feature_app/src/main/res/layout/activity_main_screen.xml
+++ b/feature_app/src/main/res/layout/activity_main_screen.xml
@@ -1,38 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:id="@+id/drawer_layout"
         android:layout_height="match_parent"
         tools:context=".MainScreenActivity">
 
-    <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/tollbarcollor"
-            android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:id="@+id/toolbar"
-            tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:ignore="MissingConstraints"/>
+    <include
+        layout="@layout/app_bar_drawer"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
 
-    <TextView
-            android:id="@+id/text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="25dp"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textColor="#168ace"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:text="Tap an item from action bar menu."
-            tools:layout_editor_absoluteX="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:ignore="MissingConstraints"/>
+    <android.support.design.widget.NavigationView
+            android:id="@+id/navigation_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/drawer_header"
+            app:menu="@menu/main_menu"
+    >
+
+    </android.support.design.widget.NavigationView>
 
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
