--- a/feature_app/src/main/res/menu/main_menu.xml
+++ b/feature_app/src/main/res/menu/main_menu.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <group>
+        <item
+                android:id="@+id/action_messages"
+                android:title="@string/message"
+                app:showAsAction="collapseActionView"/>
     <item
             android:id="@+id/action_settings"
             android:title="@string/menu_action_settings"
             app:showAsAction="collapseActionView"/>
+
     <item
             android:id="@+id/action_about_us"
             android:title="@string/menu_action_about_us"
             app:showAsAction="collapseActionView"/>
+    </group>
 </menu>
