--- a/feature_app/src/main/res/menu/main_menu.xml
+++ b/feature_app/src/main/res/menu/main_menu.xml
@@ -4,15 +4,18 @@
         <item
                 android:id="@+id/action_messages"
                 android:title="@string/message"
+                android:icon="@drawable/ic_mail"
                 app:showAsAction="collapseActionView"/>
     <item
             android:id="@+id/action_settings"
             android:title="@string/menu_action_settings"
+            android:icon="@drawable/ic_settings"
             app:showAsAction="collapseActionView"/>
 
     <item
             android:id="@+id/action_about_us"
             android:title="@string/menu_action_about_us"
+            android:icon="@drawable/ic_about"
             app:showAsAction="collapseActionView"/>
     </group>
 </menu>
