--- a/feature_app/src/main/res/layout-land/activity_login.xml
+++ b/feature_app/src/main/res/layout-land/activity_login.xml
@@ -8,83 +8,81 @@
         android:alpha="1"
         tools:context=".LoginActivity">
 
-    <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="213dp"
-            android:layout_height="184dp"
-            android:background="@drawable/logo"
-            tools:ignore="MissingConstraints"
-            android:orientation="horizontal"
-            android:id="@+id/linearLayoutCompat2"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/linearLayoutCompat">
-
-    </android.support.v7.widget.LinearLayoutCompat>
-
-    <android.support.v7.widget.LinearLayoutCompat
+    <EditText
+            android:layout_width="493dp"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/txtemail"
+            android:hint="@string/txtHintEmail"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtpass" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="25dp"/>
+    <EditText
+            android:layout_width="493dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/txtpass"
+            android:hint="@string/txtHintPassword"
+            tools:ignore="MissingConstraints" android:layout_marginBottom="128dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:layout_marginStart="25dp"/>
+    <Button
+            android:text="@string/btnlogin"
+            android:layout_width="232dp"
+            android:layout_height="47dp"
+            android:id="@+id/btnlogin"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
+            android:onClick="goToMainScreenActvity"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/btncadastr" app:layout_constraintHorizontal_bias="0.519"
+            tools:ignore="OnClick"/>
+    <Button
+            android:text="@string/btnlogg"
+            android:textColor="#5555ff"
+            android:background="@null"
+            android:layout_width="243dp"
+            android:layout_height="47dp"
+            android:id="@+id/btncadastr"
+            android:drawableLeft="@drawable/icons8google48"
+            android:textSize="18sp"
+            android:onClick="goToMainScreenActvity"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="56dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass" app:layout_constraintVertical_bias="1.0"/>
+    <ImageView
+            android:layout_width="141dp"
+            android:layout_height="125dp"
+            android:id="@+id/imageView"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.424"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:src="@drawable/ic_account_circle_login"/>
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints" android:id="@+id/linearLayoutCompat"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="56dp" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0">
-
-
-        <android.support.constraint.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            <Button
-                    android:text="@string/btnlogin"
-                    android:layout_width="290dp"
-                    android:layout_height="47dp"
-                    android:textStyle="bold"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/buttonshapecollor"
-                    android:id="@+id/btnlogin"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toTopOf="@+id/btncadastr"/>
-            <EditText
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:id="@+id/txtpass" android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@+id/btnlogin" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/txtHintPassword"/>
-            <EditText
-                    android:layout_width="325dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:ems="10"
-                    android:id="@+id/txtemail"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@+id/txtpass" app:layout_constraintHorizontal_bias="0.511"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:hint="@string/txtHintEmail" app:layout_constraintVertical_bias="1.0"/>
-            <Button
-                    android:text="@string/btncadastr"
-                    android:textColor="#5555ff"
-                    android:background="@null"
-                    android:layout_width="179dp"
-                    android:layout_height="42dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/btncadastr"
-                    android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.LinearLayoutCompat>
+            android:id="@+id/textView"
+            android:textSize="20dp"
+            android:text="@string/tv_loginhere"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.499"
+            app:layout_constraintVertical_bias="0.007"/>
 
 
 </android.support.constraint.ConstraintLayout>
