--- a/feature_app/src/main/res/layout/activity_login.xml
+++ b/feature_app/src/main/res/layout/activity_login.xml
@@ -8,87 +8,82 @@
         android:alpha="1"
         tools:context=".LoginActivity">
 
-    <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="312dp"
-            android:layout_height="248dp"
-            android:background="@drawable/logo"
-            tools:ignore="MissingConstraints" android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat" android:id="@+id/linearLayoutCompat2"
-            app:layout_constraintHorizontal_bias="0.52" android:layout_marginTop="90dp">
-
-    </android.support.v7.widget.LinearLayoutCompat>
-
-    <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            tools:ignore="MissingConstraints" android:id="@+id/linearLayoutCompat"
+    <ImageView
+            android:layout_width="130dp"
+            android:layout_height="98dp"
+            android:id="@+id/imageView"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="1.0"
+            android:src="@drawable/ic_account_circle_login"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/txtemail"
+            android:hint="@string/txtHintEmail"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtpass" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/txtpass"
+            android:hint="@string/txtHintPassword"
+            tools:ignore="MissingConstraints" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="268dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+            android:text="@string/btnlogin"
+            android:layout_width="290dp"
+            android:layout_height="47dp"
+            android:id="@+id/btnlogin"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
+            android:layout_marginTop="40dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass"
+            android:layout_marginEnd="8dp"
+            android:onClick="goToMainScreenActvity"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <Button
+            android:text="@string/btnlogg"
+            android:textColor="#5555ff"
+            android:background="@null"
+            android:layout_width="246dp"
+            android:layout_height="63dp"
+            android:id="@+id/btncadastr"
+            android:drawableLeft="@drawable/icons8google48"
+            android:textSize="18sp"
+            android:onClick="goToMainScreenActvity"
+            android:layout_marginBottom="40dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
-            app:layout_constraintHorizontal_bias="0.0">
-
-
-        <android.support.constraint.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            <Button
-                    android:text="@string/btnlogin"
-                    android:layout_width="290dp"
-                    android:layout_height="47dp"
-                    android:id="@+id/btnlogin"
-                    android:textStyle="bold"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/buttonshapecollor"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:onClick="goToMainScreenActvity"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toTopOf="@+id/btncadastr"/>
-            <EditText
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    android:ems="10"
-                    android:id="@+id/txtpass" android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@+id/btnlogin" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" android:hint="@string/txtHintPassword"/>
-            <EditText
-                    android:layout_width="325dp"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
-                    android:ems="10"
-                    android:id="@+id/txtemail"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp" android:layout_marginBottom="20dp"
-                    app:layout_constraintBottom_toTopOf="@+id/txtpass" app:layout_constraintHorizontal_bias="0.511"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                    android:hint="@string/txtHintEmail" app:layout_constraintVertical_bias="1.0"/>
-            <Button
-                    android:text="@string/btncadastr"
-                    android:textColor="#5555ff"
-                    android:background="@null"
-                    android:layout_width="179dp"
-                    android:layout_height="42dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:id="@+id/btncadastr"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    android:onClick="goToSignUpActvity"/>
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.LinearLayoutCompat>
+            android:layout_marginEnd="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnlogin"
+            app:layout_constraintVertical_bias="0.76"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.961"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:textSize="20dp"
+            android:text="@string/tv_loginhere"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtemail" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
 </android.support.constraint.ConstraintLayout>
