--- a/feature_app/src/main/res/layout/activity_main.xml
+++ b/feature_app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,50 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:alpha="1"
+        tools:context=".LoginActivity">
+
+    <android.support.v7.widget.LinearLayoutCompat
+            android:layout_width="367dp"
+            android:layout_height="293dp"
+            android:background="@drawable/logo"
+            tools:ignore="MissingConstraints" android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/linearLayoutCompat2"
+            android:layout_marginTop="100dp">
+
+    </android.support.v7.widget.LinearLayoutCompat>
+    <Button
+            android:text="@string/btncadastr"
+            android:textColor="#5555ff"
+            android:background="@null"
+            android:layout_width="163dp"
+            android:layout_height="42dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/btnmainsign"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="36dp"
+            android:onClick="goToSignUpActvity" android:layout_marginBottom="60dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
+            app:layout_constraintVertical_bias="1.0"/>
+    <Button
+            android:text="@string/btnlogin"
+            android:layout_width="146dp"
+            android:layout_height="58dp"
+            android:textStyle="bold"
+            android:textColor="#ffffff"
+            android:background="@drawable/buttonshapecollor"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="44dp"
+            android:onClick="gotoLoginActivity"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
+            app:layout_constraintVertical_bias="0.744"
+            android:id="@+id/btnmainlogin" tools:ignore="OnClick"/>
+
 
 </android.support.constraint.ConstraintLayout>
