modify adapter and fragment home

--- a/feature_app/src/main/res/layout/layout_center_view_profile.xml
+++ b/feature_app/src/main/res/layout/layout_center_view_profile.xml
@@ -96,17 +96,11 @@
                     android:layout_marginBottom="50dp"
             >
 
-                <GridView
-                        android:id="@+id/gridViewPhotos"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:horizontalSpacing="1dp"
-                        android:numColumns="3"
-                        android:stretchMode="columnWidth"
-                        android:verticalSpacing="1dp">
-                </GridView>
+                <android.support.v7.widget.RecyclerView
 
+                        android:id="@+id/list_home"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
 
             </RelativeLayout>
 
