--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -19,7 +19,7 @@
             app:layout_constraintBottom_toTopOf="@+id/txtpass" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="25dp"/>
+            app:layout_constraintStart_toEndOf="@+id/img_uploaded" android:layout_marginStart="25dp"/>
     <EditText
             android:layout_width="493dp"
             android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
             android:hint="@string/txtHintPassword"
             tools:ignore="MissingConstraints" android:layout_marginBottom="128dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/img_uploaded"
             android:layout_marginStart="25dp"/>
     <Button
             android:text="@string/btnlogin"
@@ -66,7 +66,7 @@
     <ImageView
             android:layout_width="141dp"
             android:layout_height="125dp"
-            android:id="@+id/imageView"
+            android:id="@+id/img_uploaded"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.424"
