--- a/app/src/main/res/layout-sw600dp-land/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_login.xml
@@ -20,7 +20,7 @@
             app:layout_constraintBottom_toTopOf="@+id/txtpass" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/imageView" android:layout_marginStart="25dp"
+            app:layout_constraintStart_toEndOf="@+id/img_uploaded" android:layout_marginStart="25dp"
             app:layout_constraintHorizontal_bias="0.532"/>
     <EditText
             android:layout_width="625dp"
@@ -32,7 +32,7 @@
             android:hint="@string/txtHintPassword"
             tools:ignore="MissingConstraints" android:layout_marginBottom="172dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/imageView"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/img_uploaded"
             android:layout_marginStart="25dp" app:layout_constraintHorizontal_bias="0.532"/>
     <Button
             android:text="@string/btnlogin"
@@ -70,7 +70,7 @@
     <ImageView
             android:layout_width="184dp"
             android:layout_height="186dp"
-            android:id="@+id/imageView"
+            android:id="@+id/img_uploaded"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.371"
