--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -11,7 +11,7 @@
     <ImageView
             android:layout_width="192dp"
             android:layout_height="159dp"
-            android:id="@+id/imageView"
+            android:id="@+id/img_uploaded"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -88,7 +88,7 @@
             app:layout_constraintBottom_toTopOf="@+id/txtemail" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.501"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_uploaded"/>
 
 
 </android.support.constraint.ConstraintLayout>
