--- a/app/src/main/res/layout-sw720dp/activity_login.xml
+++ b/app/src/main/res/layout-sw720dp/activity_login.xml
@@ -11,7 +11,7 @@
     <ImageView
             android:layout_width="277dp"
             android:layout_height="276dp"
-            android:id="@+id/imageView"
+            android:id="@+id/img_uploaded"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
@@ -85,7 +85,7 @@
             android:textSize="40sp"
             android:text="@string/tv_loginhere"
             android:layout_marginTop="40dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/img_uploaded" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/txtemail"/>
