--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     <ImageView
             android:layout_width="130dp"
             android:layout_height="98dp"
-            android:id="@+id/imageView"
+            android:id="@+id/img_uploaded"
             android:layout_marginBottom="40dp"
             app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
