--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -65,7 +65,7 @@
             android:text="@string/tvsign_up"
             android:layout_width="174dp"
             android:layout_height="43dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
@@ -86,7 +86,7 @@
             android:textSize="18sp"
             android:onClick="goToMainScreenActvity"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btn_photoform"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btn_signup"
             android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"/>
