--- a/app/src/main/res/layout-sw600dp-land/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_login.xml
@@ -38,7 +38,7 @@
             android:text="@string/btnlogin"
             android:layout_width="232dp"
             android:layout_height="62dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:textSize="30sp"
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txtpass" app:layout_constraintVertical_bias="0.539"
-            app:layout_constraintStart_toEndOf="@+id/btn_photoform" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/btn_signup" android:layout_marginStart="8dp"/>
     <ImageView
             android:layout_width="184dp"
             android:layout_height="186dp"
