--- a/app/src/main/res/layout-sw600dp/activity_login.xml
+++ b/app/src/main/res/layout-sw600dp/activity_login.xml
@@ -43,12 +43,12 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtemail"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_photoform"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_signup"/>
     <Button
             android:text="@string/btnlogin"
             android:layout_width="275dp"
             android:layout_height="76dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
@@ -77,7 +77,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/btn_photoform"/>
+            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
