--- a/app/src/main/res/layout-sw720dp/activity_login.xml
+++ b/app/src/main/res/layout-sw720dp/activity_login.xml
@@ -43,12 +43,12 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/txtemail"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_photoform"/>
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_signup"/>
     <Button
             android:text="@string/btnlogin"
             android:layout_width="290dp"
             android:layout_height="88dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textSize="30sp"
             android:textColor="#ffffff"
@@ -74,7 +74,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_photoform"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"
             app:layout_constraintVertical_bias="0.363"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
     />
