--- a/app/src/main/res/layout-sw720dp/activity_sign_up.xml
+++ b/app/src/main/res/layout-sw720dp/activity_sign_up.xml
@@ -50,7 +50,7 @@
             app:layout_constraintTop_toBottomOf="@+id/txtpass" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_photoform"/>
+            app:layout_constraintBottom_toTopOf="@+id/btn_signup"/>
     <EditText
             android:layout_width="0dp"
             android:layout_height="80dp"
@@ -70,7 +70,7 @@
             android:text="@string/tvsign_up"
             android:layout_width="272dp"
             android:layout_height="67dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:textSize="30sp"
@@ -94,7 +94,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_photoform" app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintTop_toBottomOf="@+id/btn_signup" app:layout_constraintHorizontal_bias="0.501"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.447"/>
     <TextView
