--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,7 @@
             android:text="@string/btnlogin"
             android:layout_width="290dp"
             android:layout_height="47dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
@@ -70,7 +70,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_photoform"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"
             app:layout_constraintVertical_bias="0.481"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
     />
