--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,25 +13,13 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/txtusername"
-            android:hint="@string/tvusername"
-            tools:ignore="MissingConstraints"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="44dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"/>
-    <EditText
-            android:layout_width="395dp"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
             android:id="@+id/txtemail"
             android:hint="@string/txtHintEmail"
             tools:ignore="MissingConstraints"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtusername"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView"/>
     <EditText
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -61,16 +49,18 @@
             android:text="@string/tvsign_up"
             android:layout_width="290dp"
             android:layout_height="47dp"
-            android:id="@+id/btn_photoform"
+            android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
+            android:onClick="signUp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="61dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="61dp" android:layout_marginTop="144dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="1.0"/>
-    <Button
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="0.495"
+            android:layout_marginBottom="3dp" app:layout_constraintBottom_toTopOf="@+id/btncadastr"
+            app:layout_constraintVertical_bias="0.828"/>
+    <com.google.android.gms.common.SignInButton
             android:text="@string/btnsign_up_with_google"
             android:textColor="#5555ff"
             android:background="@null"
@@ -79,22 +69,22 @@
             android:id="@+id/btncadastr"
             android:drawableLeft="@drawable/icons8google48"
             android:textSize="18sp"
-            android:onClick="goToMainScreenActvity"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="83dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="82dp" android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_photoform" app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.496"
+            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView"
             android:textSize="20dp"
             android:text="@string/tvsign_up"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtemail"/>
 
 
 </android.support.constraint.ConstraintLayout>
