--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -2,17 +2,22 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools">
+
 
 
     <RelativeLayout
+            android:id="@+id/relLayout_itens"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rel_layHome"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true">
+            tools:ignore="ExtraText">
 
-        <include layout="@layout/layout_center_view_profile"/>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/list_home"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:overScrollMode="never" />
+        />
 
     </RelativeLayout>
 
