--- a/app/src/main/res/layout/photo_formulary.xml
+++ b/app/src/main/res/layout/photo_formulary.xml
@@ -8,20 +8,6 @@
         android:alpha="1"
         tools:context=".SignUpActivity">
 
-    <Button
-            android:text="@string/btn_photoform"
-            android:layout_width="290dp"
-            android:layout_height="47dp"
-            android:id="@+id/btn_signup"
-            android:textStyle="bold"
-            android:textColor="#ffffff"
-            android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="61dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="61dp"
-            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="72dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
     <android.support.design.widget.TextInputLayout
             android:layout_width="395dp"
             android:layout_height="122dp"
@@ -37,8 +23,8 @@
                 android:hint="@string/hint_form" android:id="@+id/txt_form"/>
     </android.support.design.widget.TextInputLayout>
     <ImageView
-            android:layout_width="111dp"
-            android:layout_height="123dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_width="119dp"
+            android:layout_height="128dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_photoform" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
@@ -62,8 +48,8 @@
             android:hint="@string/hint_phoneform"
             android:id="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="36dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_signup" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.0" tools:layout_editor_absoluteY="458dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
