--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -17,9 +17,10 @@
             android:hint="@string/txtHintEmail"
             android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toTopOf="@+id/txtpass" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.962"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toEndOf="@+id/img_uploaded" android:layout_marginStart="25dp"/>
+            app:layout_constraintStart_toEndOf="@+id/img_uploaded" android:layout_marginStart="25dp"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
             android:layout_width="493dp"
             android:layout_height="wrap_content"
@@ -27,10 +28,10 @@
             android:ems="10"
             android:id="@+id/txtpass"
             android:hint="@string/txtHintPassword"
-            tools:ignore="MissingConstraints" android:layout_marginBottom="128dp"
+            tools:ignore="MissingConstraints" android:layout_marginBottom="160dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/img_uploaded"
-            android:layout_marginStart="25dp"/>
+            android:layout_marginStart="25dp" app:layout_constraintHorizontal_bias="0.0"/>
     <Button
             android:text="@string/btnlogin"
             android:layout_width="232dp"
@@ -39,37 +40,32 @@
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
+            android:onClick="signIn"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/btncadastr" app:layout_constraintHorizontal_bias="0.551"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="112dp"
+            app:layout_constraintStart_toStartOf="parent"
             tools:ignore="OnClick" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtpass"
-            app:layout_constraintVertical_bias="0.56"/>
-    <Button
+            app:layout_constraintVertical_bias="0.53"/>
+    <com.google.android.gms.common.SignInButton
             android:text="@string/btnlogg"
             android:textColor="#5555ff"
-            android:background="@null"
-            android:layout_width="243dp"
-            android:layout_height="47dp"
-            android:id="@+id/btncadastr"
-            android:drawableLeft="@drawable/icons8google48"
-            android:textSize="18sp"
-            android:onClick="goToMainScreenActvity"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtpass" app:layout_constraintVertical_bias="0.56"
-            app:layout_constraintStart_toEndOf="@+id/btn_signup" android:layout_marginStart="8dp"/>
+            android:layout_width="176dp"
+            android:layout_height="54dp"
+            android:id="@+id/google_button"
+            app:layout_constraintStart_toEndOf="@+id/btn_signup"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.338"
+            app:layout_constraintVertical_bias="0.571"/>
+
     <ImageView
             android:layout_width="141dp"
             android:layout_height="125dp"
             android:id="@+id/img_uploaded"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.424"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.422"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0" android:src="@drawable/ic_account_circle_login"/>
