--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="1"
-        tools:context=".LoginActivity">
+        tools:context=".MainActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="358dp"
