--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -9,20 +9,7 @@
         tools:context=".SignUpActivity">
 
     <EditText
-            android:layout_width="395dp"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/txtusername"
-            android:hint="@string/tvusername"
-            tools:ignore="MissingConstraints"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtemail"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <EditText
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
@@ -31,65 +18,67 @@
             tools:ignore="MissingConstraints"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtusername"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtpass"/>
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/txtpass"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/txtconfirmpass"
             android:hint="@string/tvconfirm_password"
             tools:ignore="MissingConstraints"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="144dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="144dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtpass"
-            app:layout_constraintHorizontal_bias="1.0"/>
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="180dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.17"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
-            android:layout_width="395dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/txtpass"
             android:hint="@string/txtHintPassword"
             tools:ignore="MissingConstraints"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtemail"
-            android:layout_marginBottom="15dp" app:layout_constraintBottom_toTopOf="@+id/txtconfirmpass"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintBottom_toTopOf="@+id/txtconfirmpass"
+            app:layout_constraintTop_toBottomOf="@+id/txtemail"/>
 
     <Button
             android:text="@string/tvsign_up"
-            android:layout_width="174dp"
+            android:layout_width="178dp"
             android:layout_height="43dp"
             android:id="@+id/btn_signup"
             android:textStyle="bold"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/btncadastr" app:layout_constraintHorizontal_bias="0.751"
+            android:onClick="signUp"
+            android:layout_marginStart="108dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.592"/>
+    <com.google.android.gms.common.SignInButton
             android:text="@string/btnsign_up_with_google"
             android:textColor="#5555ff"
             android:background="@null"
-            android:layout_width="168dp"
-            android:layout_height="51dp"
+            android:layout_width="212dp"
+            android:layout_height="50dp"
             android:id="@+id/btncadastr"
             android:drawableLeft="@drawable/icons8google48"
             android:textSize="18sp"
-            android:onClick="goToMainScreenActvity"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/btn_signup"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"/>
+            app:layout_constraintStart_toEndOf="@+id/btn_signup"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.358" app:layout_constraintVertical_bias="0.55"/>
 
 
 </android.support.constraint.ConstraintLayout>
