--- a/app/src/main/res/layout-sw720dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_main.xml
@@ -6,19 +6,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="1"
-        tools:context=".LoginActivity">
+        tools:context=".MainActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="441dp"
-            android:layout_height="380dp"
+            android:layout_width="915dp"
             android:background="@drawable/logo"
             tools:ignore="MissingConstraints" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/linearLayoutCompat2"
             android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.535"
-            app:layout_constraintVertical_bias="0.157">
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.0" android:layout_height="match_parent">
 
     </android.support.v7.widget.LinearLayoutCompat>
     <Button
@@ -30,11 +29,11 @@
             android:id="@+id/btnmainsign"
             android:textSize="30sp"
             android:onClick="goToSignUpActvity"
-            app:layout_constraintStart_toEndOf="@+id/btnmainlogin"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.746" app:layout_constraintVertical_bias="0.907"/>
+            android:layout_marginBottom="312dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat2" android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.443"/>
     <Button
             android:text="@string/btnlogin"
             android:layout_width="248dp"
@@ -45,12 +44,11 @@
             android:textSize="30sp"
             android:background="@drawable/buttonshapecollor"
             android:onClick="gotoLoginActivity"
-            tools:ignore="OnClick" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.906"
-            app:layout_constraintEnd_toStartOf="@+id/btnmainsign" android:layout_marginEnd="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/linearLayoutCompat2"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnmainsign"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.44" app:layout_constraintVertical_bias="0.751"/>
 
 
 </android.support.constraint.ConstraintLayout>
