--- a/app/src/main/res/layout-sw720dp/activity_login.xml
+++ b/app/src/main/res/layout-sw720dp/activity_login.xml
@@ -54,30 +54,12 @@
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
             android:layout_marginEnd="8dp"
-            android:onClick="goToMainScreenActvity"
+            android:onClick="signIn"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="96dp"
             app:layout_constraintTop_toBottomOf="@+id/txtpass"/>
-    <Button
-            android:text="@string/btnlogg"
-            android:textColor="#5555ff"
-            android:background="@null"
-            android:layout_width="379dp"
-            android:layout_height="89dp"
-            android:id="@+id/btncadastr"
-            android:drawableLeft="@drawable/icons8google48"
-            android:textSize="30sp"
-            android:onClick="goToMainScreenActvity"
-            android:layout_marginBottom="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"
-            app:layout_constraintVertical_bias="0.363"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-    />
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +71,20 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/txtemail"/>
+    <com.google.android.gms.common.SignInButton
+            android:text="@string/btnlogg"
+            android:textColor="#5555ff"
+            android:layout_width="263dp"
+            android:layout_height="110dp"
+            android:id="@+id/google_button"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"
+            app:layout_constraintVertical_bias="0.481"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+    />
 
 
 </android.support.constraint.ConstraintLayout>
