--- a/app/src/main/res/layout-sw720dp/activity_main.xml
+++ b/app/src/main/res/layout-sw720dp/activity_main.xml
@@ -6,11 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="1"
-        tools:context=".LoginActivity">
+        tools:context=".MainActivity">
 
     <android.support.v7.widget.LinearLayoutCompat
-            android:layout_width="691dp"
-            android:layout_height="555dp"
+            android:layout_width="match_parent"
+            android:layout_height="734dp"
             android:background="@drawable/logo"
             tools:ignore="MissingConstraints"
             android:id="@+id/linearLayoutCompat2"
@@ -25,12 +25,12 @@
             android:text="@string/btncadastr"
             android:textColor="#5555ff"
             android:background="@null"
-            android:layout_width="233dp"
-            android:layout_height="72dp"
+            android:layout_width="275dp"
+            android:layout_height="105dp"
             android:id="@+id/btnmainsign"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:onClick="goToSignUpActvity"
-            tools:ignore="MissingConstraints"
+            tools:ignore="MissingConstraints,OnClick"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" android:layout_marginEnd="104dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
@@ -38,11 +38,11 @@
             app:layout_constraintStart_toEndOf="@+id/btnmainlogin" android:layout_marginStart="117dp"/>
     <Button
             android:text="@string/btnlogin"
-            android:layout_width="223dp"
-            android:layout_height="72dp"
+            android:layout_width="275dp"
+            android:layout_height="105dp"
             android:id="@+id/btnmainlogin"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:textColor="#ffffff"
             android:background="@drawable/buttonshapecollor"
             android:onClick="gotoLoginActivity"
