fix screens main-login-signup

--- a/app/src/main/res/layout/demand_node.xml
+++ b/app/src/main/res/layout/demand_node.xml
@@ -30,6 +30,7 @@
                 android:textSize="18sp"
                 android:textColor="#ffffff"
                 android:gravity="center"
+                android:textStyle="bold"
                 android:background="@drawable/buttonshapecollor"
                 android:layout_height="wrap_content" android:id="@+id/tv_userClient"/>
 
