--- a/app/src/main/res/layout-land/activity_demand_detail.xml
+++ b/app/src/main/res/layout-land/activity_demand_detail.xml
@@ -5,11 +5,11 @@
                                              android:layout_height="match_parent">
 
     <ImageView
-            android:layout_height="251dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_height="88dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_demandNode" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="match_parent" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_width="356dp"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout2">
         <TextView
                 android:text="@string/tv_NCphone"
@@ -61,8 +61,8 @@
             android:id="@+id/tv_comentDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_NComent"/>
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/btn_returnDemand"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:text="@string/tv_NComent"
             android:layout_width="wrap_content"
@@ -73,7 +73,7 @@
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_comentDemand" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.302"/>
+            app:layout_constraintVertical_bias="0.612"/>
     <Button
             android:text="@string/btn_return"
             android:layout_width="164dp"
@@ -83,8 +83,6 @@
             android:textColor="#ffffff"
             android:id="@+id/btn_returnDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.497" android:onClick="DemandDetailBacktoMain"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_comentDemand"
-            app:layout_constraintVertical_bias="0.955"/>
+            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.499" android:onClick="DemandDetailBacktoMain"/>
 </android.support.constraint.ConstraintLayout>
