--- a/app/src/main/res/layout-land/activity_formulary.xml
+++ b/app/src/main/res/layout-land/activity_formulary.xml
@@ -10,8 +10,8 @@
         tools:context=".FormularyActivity">
 
     <ImageView
-            android:layout_width="178dp"
-            android:layout_height="165dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_width="122dp"
+            android:layout_height="133dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_photoform"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="2dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
@@ -26,9 +26,8 @@
             android:id="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginBottom="312dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_form"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="108dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/btnsubmit"
             android:layout_width="wrap_content"
@@ -42,7 +41,7 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toStartOf="@+id/button2"
             android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"
-            android:onClick="SubmitFormulary"/>
+            android:onClick="SubmitFormulary" app:layout_constraintVertical_bias="0.491"/>
     <Button
             android:text="@string/btn_return"
             android:layout_width="147dp"
@@ -67,16 +66,18 @@
             app:layout_constraintVertical_bias="0.098" app:layout_constraintStart_toEndOf="@+id/img_photoform"
             android:layout_marginStart="60dp"/>
     <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/text_form"
-            android:hint="@string/hint_form" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/txt_phoneform" app:layout_constraintVertical_bias="0.307"/>
+            android:hint="@string/hint_form"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_phoneform"
+            app:layout_constraintVertical_bias="0.771"/>
 
 
 </android.support.constraint.ConstraintLayout>
