--- a/app/src/main/res/layout-sw720dp-land/activity_demand_detail.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_demand_detail.xml
@@ -5,11 +5,11 @@
                                              android:layout_height="match_parent">
 
     <ImageView
-            android:layout_height="251dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_height="341dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_demandNode" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_width="match_parent" app:layout_constraintHorizontal_bias="0.0"/>
+            android:layout_width="744dp"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -23,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_NClient"
+                android:textSize="30sp"
                 android:layout_weight="1"
                 tools:layout_editor_absoluteY="306dp" tools:layout_editor_absoluteX="29dp"/>
         <TextView
@@ -30,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_EntryEmail"
+                android:textSize="30sp"
                 android:layout_weight="2"
                 tools:layout_editor_absoluteY="307dp" tools:layout_editor_absoluteX="195dp"/>
     </LinearLayout>
@@ -38,13 +40,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="10dp"
+            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/linearLayout2">
         <TextView
                 android:text="@string/tv_NCphone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_NCphone"
+                android:textSize="30sp"
                 android:layout_weight="1"
                 tools:layout_editor_absoluteY="354dp" tools:layout_editor_absoluteX="34dp"/>
         <TextView
@@ -52,39 +55,41 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_EntryNumber"
+                android:textSize="30sp"
                 android:layout_weight="2"
                 tools:layout_editor_absoluteY="354dp" tools:layout_editor_absoluteX="199dp"/>
     </LinearLayout>
     <TextView
             android:layout_width="0dp"
-            android:layout_height="73dp"
+            android:layout_height="118dp"
             android:id="@+id/tv_comentDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tv_NComent"/>
+            android:textSize="30sp"
+            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btn_returnDemand"
+            app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:text="@string/tv_NComent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_NComent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="30sp"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/tv_comentDemand" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.302"/>
+            app:layout_constraintBottom_toTopOf="@+id/tv_comentDemand" app:layout_constraintHorizontal_bias="0.006"
+            app:layout_constraintVertical_bias="0.134"/>
     <Button
             android:text="@string/btn_return"
-            android:layout_width="164dp"
-            android:layout_height="wrap_content"
+            android:layout_width="327dp"
+            android:layout_height="60dp"
             android:background="@drawable/buttonshapecollor"
             android:textStyle="bold"
             android:textColor="#ffffff"
+            android:textSize="30sp"
             android:id="@+id/btn_returnDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.497" android:onClick="DemandDetailBacktoMain"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_comentDemand"
-            app:layout_constraintVertical_bias="0.955"/>
+            android:layout_marginBottom="52dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="DemandDetailBacktoMain"/>
 </android.support.constraint.ConstraintLayout>
