--- a/app/src/main/res/layout-sw720dp-land/activity_formulary.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_formulary.xml
@@ -10,11 +10,11 @@
         tools:context=".FormularyActivity">
 
     <ImageView
-            android:layout_width="178dp"
-            android:layout_height="165dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_width="446dp"
+            android:layout_height="363dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_photoform"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="2dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="2dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/tv_authorN" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.0"/>
     <EditText
@@ -23,33 +23,35 @@
             android:inputType="phone"
             android:ems="10"
             android:hint="@string/hint_phoneform"
+            android:textSize="40sp"
             android:id="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="1.0"
-            android:layout_marginBottom="312dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_form"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginBottom="172dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
             android:text="@string/btnsubmit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="156dp"
+            android:layout_height="64dp"
             android:id="@+id/btnsubmit"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="8dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
+            android:textSize="30sp"
             android:background="@drawable/buttonshapecollor"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toStartOf="@+id/button2"
             android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.51"
-            android:onClick="SubmitFormulary"/>
+            android:onClick="SubmitFormulary" app:layout_constraintVertical_bias="0.491"/>
     <Button
             android:text="@string/btn_return"
-            android:layout_width="147dp"
-            android:layout_height="wrap_content"
+            android:layout_width="301dp"
+            android:layout_height="74dp"
             android:id="@+id/button2" android:layout_marginBottom="8dp"
             android:textStyle="bold"
             android:textColor="#ffffff"
+            android:textSize="30sp"
             android:background="@drawable/buttonshapecollor"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
@@ -62,21 +64,25 @@
             android:id="@+id/tv_authorN" android:layout_marginTop="80dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="80dp"
+            android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/text_form"
-            app:layout_constraintVertical_bias="0.098" app:layout_constraintStart_toEndOf="@+id/img_photoform"
+            app:layout_constraintVertical_bias="0.338" app:layout_constraintStart_toEndOf="@+id/img_photoform"
             android:layout_marginStart="60dp"/>
     <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/text_form"
-            android:hint="@string/hint_form" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/txt_phoneform" app:layout_constraintVertical_bias="0.307"/>
+            android:textSize="40sp"
+            android:hint="@string/hint_form"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_phoneform"
+            app:layout_constraintVertical_bias="0.936"/>
 
 
 </android.support.constraint.ConstraintLayout>
