--- a/app/src/main/res/layout-sw720dp-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-sw720dp-land/activity_sign_up.xml
@@ -9,20 +9,6 @@
         tools:context=".SignUpActivity">
 
     <EditText
-            android:layout_width="678dp"
-            android:layout_height="80sp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/txtusername"
-            android:hint="@string/tvusername"
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtemail"
-            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"/>
-    <EditText
             android:layout_width="674dp"
             android:layout_height="80sp"
             android:inputType="textEmailAddress"
@@ -33,9 +19,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             android:textSize="20sp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtusername"
-            android:layout_marginBottom="28dp" app:layout_constraintBottom_toTopOf="@+id/txtpass"
-            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"/>
+            app:layout_constraintBottom_toTopOf="@+id/txtpass"
+            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.496" android:layout_marginBottom="32dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.981"/>
     <EditText
             android:layout_width="671dp"
             android:layout_height="80sp"
@@ -61,8 +49,8 @@
             tools:ignore="MissingConstraints"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txtemail"
-            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"/>
+            app:layout_constraintStart_toEndOf="@+id/imageView3" android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.505" tools:layout_editor_absoluteY="300dp"/>
 
     <Button
             android:text="@string/tvsign_up"
@@ -73,28 +61,28 @@
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
+            android:onClick="signUp"
             android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/btncadastr" app:layout_constraintHorizontal_bias="0.123"
-            app:layout_constraintVertical_bias="0.566"/>
-    <Button
+            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"
+            app:layout_constraintVertical_bias="0.556" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/btncadastr" app:layout_constraintHorizontal_bias="0.0"/>
+    <com.google.android.gms.common.SignInButton
             android:text="@string/btnsign_up_with_google"
             android:textColor="#5555ff"
             android:background="@null"
-            android:layout_width="360dp"
-            android:layout_height="51dp"
+            android:layout_width="246dp"
+            android:layout_height="67dp"
             android:id="@+id/btncadastr"
-            android:drawableStart="@drawable/icons8google48"
-            android:textSize="20sp"
-            android:onClick="goToMainScreenActvity"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.581"
-            app:layout_constraintStart_toEndOf="@+id/btn_signup" android:layout_marginStart="8dp"/>
+            android:drawableLeft="@drawable/icons8google48"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"
+            app:layout_constraintVertical_bias="0.583" app:layout_constraintStart_toEndOf="@+id/btn_signup"
+            android:layout_marginStart="8dp"/>
     <ImageView
             android:src="@drawable/ic_account_circle_200dp"
             android:layout_width="286dp"
@@ -116,10 +104,8 @@
             android:layout_marginTop="32dp"
             android:textSize="30sp"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtusername"
-            app:layout_constraintHorizontal_bias="0.588"
-            app:layout_constraintVertical_bias="0.207"/>
+            app:layout_constraintHorizontal_bias="0.527"
+    />
 
 
 </android.support.constraint.ConstraintLayout>
