--- a/app/src/main/res/layout-sw720dp/activity_demand_detail.xml
+++ b/app/src/main/res/layout-sw720dp/activity_demand_detail.xml
@@ -5,7 +5,7 @@
                                              android:layout_height="match_parent">
 
     <ImageView
-            android:layout_height="251dp" app:srcCompat="@drawable/ic_account_circle_200dp"
+            android:layout_height="475dp" app:srcCompat="@drawable/ic_account_circle_200dp"
             android:id="@+id/img_demandNode" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
@@ -21,6 +21,7 @@
         <TextView
                 android:text="@string/tv_NClient"
                 android:layout_width="wrap_content"
+                android:textSize="30sp"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_NClient"
                 android:layout_weight="1"
@@ -30,6 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_EntryEmail"
+                android:textSize="30sp"
                 android:layout_weight="2"
                 tools:layout_editor_absoluteY="307dp" tools:layout_editor_absoluteX="195dp"/>
     </LinearLayout>
@@ -44,6 +46,7 @@
                 android:text="@string/tv_NCphone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="30sp"
                 android:id="@+id/tv_NCphone"
                 android:layout_weight="1"
                 tools:layout_editor_absoluteY="354dp" tools:layout_editor_absoluteX="34dp"/>
@@ -52,22 +55,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_EntryNumber"
+                android:textSize="30sp"
                 android:layout_weight="2"
                 tools:layout_editor_absoluteY="354dp" tools:layout_editor_absoluteX="199dp"/>
     </LinearLayout>
     <TextView
             android:layout_width="0dp"
-            android:layout_height="73dp"
+            android:layout_height="145dp"
             android:id="@+id/tv_comentDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:gravity="center"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
+            android:textSize="30sp"
+            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="148dp"
             app:layout_constraintTop_toBottomOf="@+id/tv_NComent"/>
     <TextView
             android:text="@string/tv_NComent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_NComent"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
@@ -76,11 +82,12 @@
             app:layout_constraintVertical_bias="0.302"/>
     <Button
             android:text="@string/btn_return"
-            android:layout_width="164dp"
-            android:layout_height="wrap_content"
+            android:layout_width="317dp"
+            android:layout_height="74dp"
             android:background="@drawable/buttonshapecollor"
             android:textStyle="bold"
             android:textColor="#ffffff"
+            android:textSize="30sp"
             android:id="@+id/btn_returnDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             android:layout_marginBottom="96dp" app:layout_constraintBottom_toBottomOf="parent"
