--- a/app/src/main/res/layout-sw720dp/activity_sign_up.xml
+++ b/app/src/main/res/layout-sw720dp/activity_sign_up.xml
@@ -9,22 +9,7 @@
         tools:context=".SignUpActivity">
 
     <EditText
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/txtusername"
-            android:hint="@string/tvusername"
-            android:textSize="30sp"
-            tools:ignore="MissingConstraints"
-            android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtemail"
-            app:layout_constraintVertical_chainStyle="spread_inside"/>
-    <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="80dp"
             android:inputType="textEmailAddress"
             android:ems="10"
@@ -32,27 +17,25 @@
             android:hint="@string/txtHintEmail"
             tools:ignore="MissingConstraints"
             android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtusername" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtpass"/>
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:layout_editor_absoluteY="304dp"/>
     <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="80dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/txtconfirmpass"
             android:hint="@string/tvconfirm_password"
             tools:ignore="MissingConstraints"
-            android:layout_marginTop="8dp"
             android:textSize="30sp"
-            app:layout_constraintTop_toBottomOf="@+id/txtpass" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_signup"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtpass"/>
     <EditText
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="80dp"
             android:inputType="textPassword"
             android:ems="10"
@@ -60,11 +43,9 @@
             android:hint="@string/txtHintPassword"
             android:textSize="30sp"
             tools:ignore="MissingConstraints"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtemail"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtconfirmpass"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtemail"/>
 
     <Button
             android:text="@string/tvsign_up"
@@ -75,28 +56,12 @@
             android:textColor="#ffffff"
             android:textSize="30sp"
             android:background="@drawable/buttonshapecollor"
-            android:onClick="goToMainScreenActvity"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"
-            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/btncadastr"/>
-    <Button
-            android:text="@string/btnsign_up_with_google"
-            android:textColor="#5555ff"
-            android:background="@null"
-            android:layout_width="383dp"
-            android:layout_height="74dp"
-            android:id="@+id/btncadastr"
-            android:drawableLeft="@drawable/icons8google48"
-            android:textSize="30sp"
-            android:onClick="goToMainScreenActvity"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/btn_signup" app:layout_constraintHorizontal_bias="0.501"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.447"/>
+            android:onClick="signUp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="144dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,8 +71,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="36dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtusername" android:layout_marginTop="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/imageView2"
+            android:layout_marginTop="64dp" app:layout_constraintHorizontal_bias="0.499"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtemail"/>
     <ImageView
             android:src="@drawable/ic_account_circle_200dp"
             android:layout_width="146dp"
@@ -118,6 +84,21 @@
             app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintVertical_chainStyle="packed" app:layout_constraintVertical_bias="0.26"
             app:layout_constraintHorizontal_bias="0.493"/>
+
+    <com.google.android.gms.common.SignInButton
+            android:text="@string/btnsign_up_with_google"
+            android:textColor="#5555ff"
+            android:background="@null"
+            android:layout_width="246dp"
+            android:layout_height="67dp"
+            android:id="@+id/btncadastr"
+            android:drawableLeft="@drawable/icons8google48"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="216dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_signup"/>
 
 
 </android.support.constraint.ConstraintLayout>
