--- a/app/src/main/res/layout/photo_node.xml
+++ b/app/src/main/res/layout/photo_node.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:id="@+id/photo_card"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorAccent"
         android:layout_height="wrap_content">
 
     <LinearLayout
@@ -19,10 +19,29 @@
             app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-                android:text="TextView"
+        <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/tv_authorUser"/>
+                android:background="@color/colorPrimary"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:text="@string/tv_authorN"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/buttonshapecollor"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="#ffffff"
+                    android:layout_height="wrap_content" android:id="@+id/tv_authorN"
+                    android:layout_weight="3"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:textColor="#ffffff"
+                    android:layout_height="wrap_content" android:id="@+id/tv_authorUser"/>
+        </LinearLayout>
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="180dp" app:srcCompat="@drawable/ic_about"
@@ -31,7 +50,11 @@
         <TextView
                 android:text="TextView"
                 android:layout_width="match_parent"
-                android:layout_height="80dp" tools:layout_editor_absoluteY="284dp"
+                android:background="@drawable/buttonshapecollor"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:layout_height="wrap_content" tools:layout_editor_absoluteY="284dp"
                 tools:layout_editor_absoluteX="43dp" android:id="@+id/tv_comment"/>
     </LinearLayout>
 
